@@ -2,13 +2,25 @@
 Hash: SHA256
 
 DIST majesty_demo.run 43170241 SHA256 3d3d1479dde2412804b8c5daa865584d77d5d60b861f2a042255e825decfbffe SHA512 67c74e3c11514649fbf1f2aadf529ce4ee62084c5825a2ec213c28ced6ec1d3ff6b6b2858f6f721c032160df794d62e4a73bcf9696ee4ebbb6ed29df1c024e31 WHIRLPOOL b8311ade80f6ed8c867806c68bfb378c7cd2a59c055df9363fe78c248564efbd110d3e31c229acecce3794f655f2abe4a531dd12f54e03e0f9d3e8e031627714
-EBUILD majesty-demo-1.0.0.ebuild 1468 SHA256 5fab785a3fedeeed98d5cb7f0e731004783bdcdb90a3d3cb1b602c41594af19a SHA512 b50ab05f944f4189257026497aec30b80c81840ab076e68fdb0a6e9f35777e8cf6789dab85dbf376034c8a6a20b2867c719d07beba909c6741d7265de0ab6fd8 WHIRLPOOL 5fa20e25e3c1f1bc8dc691e2b87578a6012518fd3cfd942f51b01a5ed7bb7a49cc49dbd4de7fa8ee0916d5789ae3d9445f7fc5ab165353764811e80ac08db479
-MISC ChangeLog 1988 SHA256 92199a7d54d10fa035b8169aec7592be08ffc4dc026bb3a7e8f81a50940013dd SHA512 f3f7b6f57b4e7484d71a507b8021521efc06d57f06c442c92f0d514f75dbfed8f32c6cd64fa9dd17de2952268cc185de3c86e8041506d91c643eaad0ee2e9684 WHIRLPOOL 13af72d2f107793c882b8f9e8561b8ef2338bf26c2f847197d9e8612b16ae9d958b23eee055b976c034f892d8b38eaf42fe0bc6e12accd27f0f35a81177ce36a
+EBUILD majesty-demo-1.0.0.ebuild 1589 SHA256 402503b2e6d389a14e04821e0129664a55f8f12350b815db6913d88016efef09 SHA512 8a57271cf5b5e67fcda18c797177fbed364e9d977c4f807265eb752397bacb6dc4ea66aada287efed1d594c2432ca520107ba1027f38da249e11cb323021cf93 WHIRLPOOL 043928dd16baa1cab5edd60885b910cb224b06e9bd4d7ae373e68a981f4a8ee507ed5b35c314a31ee9e24176b46f0059d02f84f3c908164535fac00a4f687e47
+MISC ChangeLog 2105 SHA256 014b0619df6411d6817a751307550f7e8a001afd7c5b23a23875130c5f3305c2 SHA512 6ccdc0fe5a3f3aa480fd9433dcab7d2f5f57d6ebe11a7ea5505f1ae77dc8b6f813be36e8a2e5d7a6abd3552d643c8eaf424cf7fdf2fe37998cb361a7d145a06f WHIRLPOOL 4cf18f8137e0fdb072a434d4b8f383ed308be5f9c52a478302b760ca8b1d15e0314b3efe8c3edb1e2226afc14c24c464616bc442ca50236c883e2797d567f442
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn4jwACgkQcaHudmEf86pr3ACbB9VgsgSmstFuHDmDkHUW+4Yr
-53QAnRRyHyfhUcmUJHQwVB9ORZDrrByV
-=jE0w
+iQJ8BAEBCABmBQJUO/NCXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO1MYP/0Veutxv7HNqJQsWOjEn/GPt
+1E1tgkmlXbXoiy+TvZAnS/5mdGDZkE/rdJ+jMcUjOZbNaGF1auxzne/xRd2V/ER/
+8eA66m3JaTZI+yMouv1S6jyerghYLiByLhGFoOMCRRtr+w1EmKGf1i7BIPI9kKsY
+ZSyXC4BbEWQG/CqwnrORpf9HdpZwfEvrhrmJzRVPPjWvVQexYZs5BQydRD8x2J8d
+xPX8I7pwSi0qFPehzbxtzXNerFYysSsDOtk11fEEdmQaNlxKe3yhDqPmlLhSW65f
+FHMWm/ncDLA5WQxkk8EptEEvC0Hvb72ANgP1+HN2MCO+7I+9Z5XDOk8r/4+2Gdzm
+G467dmDjKUXxjPBlvLk4UupIeUrSQcbPZe5Kmo76jnpoXjruEpNrFCjN8uw+O2DD
+6CaTn7KbDQEx/Fid7dq88xhguSdVjl1cGQ6W97zbt1pRbs0+bHTtWhbnlssCOITT
+b9xCfV1T0YJKWm0cjieNXM0WAWu3aQ2PgQUnwD+l6A/JDFy25QTHvfWntVhj29t6
+U+vXCJCq06giH118MqSIv4Pri9zIzu1widgcZ5pFDYtPj5HAruogIkGG/kcUcpNK
+aIOR0bH0Wn8+aw5VJYl1Xjn6ocsA31KPJWUUZfhqSAMJewLTr8a5ls9QhK9X+0/K
+g7Lmw9F46P8OP5jhQ4E+
+=8A3s
 -----END PGP SIGNATURE-----
