@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/majesty-demo
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/majesty-demo/ChangeLog,v 1.14 2014/08/10 21:21:00 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/majesty-demo/ChangeLog,v 1.15 2014/10/13 15:44:00 mgorny Exp $
+
+  13 Oct 2014; Michał Górny <mgorny@gentoo.org> majesty-demo-1.0.0.ebuild:
+  Support multilib providers for deps.
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> majesty-demo-1.0.0.ebuild:
   QA: drop trailing '.' from DESCRIPTION
